tests/samples/intent-bad-syntax.err
intent-bad-syntax.flow:1:Syntax error. "ne intent *'greeting'".
