tests/samples/intent-bad-syntax.flow
define intent 'greeting'

flow onboarding given #greeting do
  say "Hello World"
done
